fix spacing on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,9 +175,9 @@ footer {
     }
 
     h1 {
-        font-size: 1.5rem;
+        font-size: 1rem;
         padding: 5px 15px;
-        margin-bottom: 2rem;
+        margin-bottom: .5rem;
     }
 
     button {
